--- a/bookpede/client/package.json
+++ b/bookpede/client/package.json
@@ -2,6 +2,10 @@
   "name": "mern",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.9.0",
+    "node": "12.4.0"
+  },
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "react": "^16.6.3",
